--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     <div class="principal">
       <div class="perfil">
         <img src="./assets/img/maria.jpg" alt="">
-        <div>
-          <p>Maria</p>
+        <div class="nombre-iconos">
+          <p>Maria 
+            <span class="iconos">
+              <img src="./assets/img/chat.png" alt="Chat">
+              <img src="./assets/img/menu.png" alt="Menu">
+            </span>
+          </p>
           <p>Activa ahora</p>
         </div>
       </div>
